--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Responsive Portfolio Website Design</title>
+    <title>Noor's portfolio</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -21,7 +21,7 @@
 
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio.</a>
+        <a href="#" class="logo">Noor's Portfolio.</a>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -138,7 +138,7 @@
                 <div class="portfolio-layer">
                     <h4>Colocation </h4>
                     <p>It's a website built with React, Nest.js, and MongoDB that helps users find houses for rent or sale. It offers various features, allowing property owners to post their listings as well</p>
-                    <a href="https://github.com/NourImeene/Colocation.git"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/NourImeene/Colocation.git" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             
@@ -148,7 +148,7 @@
                 <div class="portfolio-layer">
                     <h4>Masroufi</h4>
                     <p>Masroufi is a smart finance app that simplifies budgeting with personalized tracking, automated alerts, and real-time insights for effortless money management</p>
-                    <a href="https://github.com/NourImeene/Masroufi.git"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/NourImeene/Masroufi.git" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
  
@@ -167,7 +167,7 @@
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial3.png" alt="">
                         <h3>Front end</h3>
-                        <p><h4> Langages:</h4> JavaScript</p>
+                        <p><h4> Languages:</h4> JavaScript</p>
 
                         <p><h4> Frameworks:</h4> React</p>
                             <p><h4> Technologies:</h4> HTML, CSS, Bootstrap</p>
@@ -175,15 +175,15 @@
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial2.png" alt="">
                         <h3>Backend</h3>
-                        <p><h4>Langages:</h4> JavaScript (Node.js), Python, Java, PHP
+                        <p><h4>Languages:</h4> JavaScript (Node.js), Python, Java, PHP
                             <h4>Frameworks:</h4> Node.js, Nest.js
-                            <h4> Bases de données:</h4> MongoDB, MySQL, Firebase
-                            <h4> Outils:</h4> Git, GitHub</p>
+                            <h4> Data Base:</h4> MongoDB, MySQL, Firebase
+                            <h4> Tools:</h4> Git, GitHub</p>
                     </div>
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/ont (2).png" alt="">
-                        <h3> Spécialisations et Outils</h3>
-                        <p><h4>Machine Learning et Deep Learning</h4>
+                        <h3> Specializations and Tools</h3>
+                        <p><h4>Machine Learning and Deep Learning</h4>
                            <h4> Visual Studio Code</h4>
                             <h4>Git, GitHub</p></h4>
                             <h4>Veed.io , CapCut</h4>
@@ -219,7 +219,7 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 | All Rights Reserved.</p>
+            <p> &copy; 2023  Nour Imene Limeme | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
