--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
                 <p>I design and build dynamic websites that not only look great but also function seamlessly across devices. Combining creativity with cutting-edge technologies, I transform ideas into interactive digital experiences that leave a lasting impression.
 
                 </p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://github.com/NourImeene" class="btn" target="_blank">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
                 <h3>Video editing</h3>
                 <p>With hands-on experience working at the education-focused startup "STMG," I bring a professional edge to video editing. As part of a dedicated team, I crafted engaging educational content, using my creativity and technical skills to deliver impactful videos that resonate with audiences.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://www.onisep.fr/formation/apres-la-3-la-voie-generale-et-technologique/qu-est-ce-que-la-voie-generale-et-technologique/la-voie-technologique-en-premiere-et-terminale/le-bac-stmg-sciences-et-technologies-du-management-et-de-la-gestion" class="btn" target="_blank">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt'></i>
                 <h3>Deep Learning</h3>
                 <p>Currently advancing my skills through CDOSS certification courses, I’m diving deep into the world of AI. I’m building a strong foundation in developing intelligent models that can solve complex problems, with the goal of applying deep learning in real-world applications</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://cdoss.org/certifications/" class="btn" target="_blank">Read More</a>
             </div>
         </div>
     </section>
