--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,11 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- For .ico format (best compatibility) -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- For .png format (modern browsers) -->
+    <link rel="icon" href="images/logo.png" type="image/png" sizes="32x32" class="logo">
 </head>
 
 <body>
@@ -56,10 +62,7 @@
         </div>
 
         <div class="profession-container">
-
             <div class="profession-box">
-                <div class="circle"></div>
-
                 <div class="profession" style="--i:0;">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Developer</h3>
@@ -70,7 +73,7 @@
                 </div>
                 
 
-                
+                <div class="circle"></div>
             </div>
 
             <div class="overlay"></div>
